Thu Feb 18 17:26:09 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_queue_clear_area): 
	 When queueing clears relative to widget->window,
	 actually store widget->window so we know that
	 the coordinates are window-relative.

Thu Feb 18 11:46:57 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk.m4: Fix glib_config_args gtk_config_args
	  confusion. (pointed out by
	  Roland Dreier <droland@mail.math.okstate.edu>)

	* gtk/gtksocket.c gtk/gtkmain.c gtk/gtkdebug.h
	  (gtk_socket_filter_func): Move the plug-socket
	  debugging code to a new "plugsocket" debug keys
	  from the previous hardcoded DPRINTF.

Thu Feb 18 00:54:46 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkclist.c: added widget arg ::titles_active.

Thu Feb 18 00:27:46 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_queue_clear_area): only translate widget
	relative coordinates to window relative if the widget is not a toplevel
	(i.e. it has ->parent != NULL), otherwise the area size gets screwed up
	for toplevels.

Tue Feb 16 14:25:44 CST 1999 Shawn T. Amundson <amundson@gtk.org>

	* INSTALL
	  README
	  configure.in
	  gtk+.spec
	  docs/gtk-config.1: version = 1.1.16

	* Makefile.am: removed colorsel example since it
	  doesn't actually exist.

	* Released GTK+ 1.1.16

Mon Feb 15 23:55:27 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/testgtk.c (create_text): Use a ScrolledWindow
	 test how Text widgets work within ScrolledWindow.
	 (POLICY_AUTOMATIC drew very badly, so it uses
	  POLICY_ALWAYS for the vscrollbar)

	* gtk/gtktext.c (gtk_text_unrealize): Free the cache
	 in the unrealize handler. Some code in gtktext.c
	 assumes that if text->line_start_cache is non-NULL,
	 the widget is realized. We'll recompute it again
	 anyways if we later re-realize.

Fri Feb 12 15:47:20 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcalender.c gtk/gtkentry.c gtk/gtkhandlebox.c
	  gtk/gtknotebook.c gtk/gtktext.c  gtk/gtkviewport.c 
	  gtk/gtkwidget.c: 
